--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -16,6 +16,7 @@
 <!ENTITY Ctr_rr				"Startujśo &brandShortName; znowego!">
 <!ENTITY Ctr_window			"wokno">
 <!ENTITY Ctr_centered		"Centrěrowano">
+<!ENTITY Ctr_page			"Page">
 
 <!ENTITY Ctr_cuibuttons		"Tłocaški">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
