--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -16,6 +16,7 @@
 <!ENTITY Ctr_rr				"Απαιτείται επανεκκίνηση!">
 <!ENTITY Ctr_window			"Παράθυρο">
 <!ENTITY Ctr_centered		"Στο κέντρο">
+<!ENTITY Ctr_page			"Page">
 
 <!ENTITY Ctr_cuibuttons		"Κουμπιά">
 <!ENTITY Ctr_cuibutnormal	"Κανονικά">
@@ -262,7 +263,7 @@
 <!ENTITY Ctr_hideurlzoom	"Απόκρυψη κουμπιού μεγέθυνσης (αν υπάρχει)">
 <!ENTITY Ctr_hideprbutton	"Απόκρυψη εικονιδίου ειδοποίησης κατά τη φραγή αναδυόμενου παραθύρου">
 <!ENTITY Ctr_locsearchbw10	"Μείωση ύψους γραμμών τοποθεσιών και αναζήτησης (πειραματικό)">
-<!ENTITY Ctr_urlbar_ib		"Κουμπί ταυτοποίησης τοποθεσιών (πλαίσιο ταυτοποίησης)">
+<!ENTITY Ctr_urlbar_ib		"Κουμπί ταυτοποίησης τοποθεσιών">
 <!ENTITY Ctr_ib_nohovcolor	"Μη εμφάνιση γκρι χρώματος κατά την κατάδειξη">
 <!ENTITY Ctr_ib_graycolor	"Γκρι χρώμα για αγνώστου ταυτότητας και «about:» σελίδες">
 <!ENTITY Ctr_verifiedcolors	"Χρώματα κουμπιού για επαληθευμένες ιστοσελίδες, ασφαλείς και μη ασφαλείς συνδέσεις">
