--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -16,6 +16,7 @@
 <!ENTITY Ctr_rr				"¡Requiere reiniciar!">
 <!ENTITY Ctr_window			"ventana">
 <!ENTITY Ctr_centered		"Centrado">
+<!ENTITY Ctr_page			"Page">
 
 <!ENTITY Ctr_cuibuttons		"Botones">
 <!ENTITY Ctr_cuibutnormal	"Normales">
@@ -262,7 +263,7 @@
 <!ENTITY Ctr_hideurlzoom	"Ocultar botón de zoom (si está presente)">
 <!ENTITY Ctr_hideprbutton	"Ocultar icono de notificación cuando se bloquee una ventana emergente">
 <!ENTITY Ctr_locsearchbw10	"Reducir altura de barras de direcciones y de búsqueda (experimental)">
-<!ENTITY Ctr_urlbar_ib		"Botón de identidad del sitio (recuadro de identidad)">
+<!ENTITY Ctr_urlbar_ib		"Botón de identidad del sitio">
 <!ENTITY Ctr_ib_nohovcolor	"No mostrar color gris al señalarlo">
 <!ENTITY Ctr_ib_graycolor	"Color gris para identidades desconocidas y páginas 'about:'">
 <!ENTITY Ctr_verifiedcolors	"Botón coloreado para sitios web verificados, y conexiones seguras y no seguras">
