--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -16,6 +16,7 @@
 <!ENTITY Ctr_rr				"Taaskäivitamine vajalik!">
 <!ENTITY Ctr_window			"aken">
 <!ENTITY Ctr_centered		"Keskele joondatud">
+<!ENTITY Ctr_page			"Page">
 
 <!ENTITY Ctr_cuibuttons		"Nupud">
 <!ENTITY Ctr_cuibutnormal	"Tavalised">
@@ -262,7 +263,7 @@
 <!ENTITY Ctr_hideurlzoom	"Peida suurenduse nupp (kui on)">
 <!ENTITY Ctr_hideprbutton	"Peida blokeeritud hüpikakende teavitusikoon">
 <!ENTITY Ctr_locsearchbw10	"Vähenda asukohariba ja otsinguriba kõrgust (katsejärgus)">
-<!ENTITY Ctr_urlbar_ib		"Saidi identiteedi nupp (identiteedi kast)">
+<!ENTITY Ctr_urlbar_ib		"Saidi identiteedi nupp">
 <!ENTITY Ctr_ib_nohovcolor	"Hiirekursoriga ikooni peale minnes ära näita halli taustavärvi">
 <!ENTITY Ctr_ib_graycolor	"Hall värvus tundmatu identiteedi ja 'about:'-lehtede korral">
 <!ENTITY Ctr_verifiedcolors	"Verifitseeritud veebisaitide ning turvaliste ja ebaturvaliste ühenduste nupuvärvid">
