--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -16,6 +16,7 @@
 <!ENTITY Ctr_rr				"Redémarrage nécessaire !">
 <!ENTITY Ctr_window			"fenêtre">
 <!ENTITY Ctr_centered		"Centrer ce titre">
+<!ENTITY Ctr_page			"Page">
 
 <!ENTITY Ctr_cuibuttons		"Boutons :">
 <!ENTITY Ctr_cuibutnormal	"Taille normale">
@@ -262,7 +263,7 @@
 <!ENTITY Ctr_hideurlzoom	"Masquer le bouton de zoom (si présent)">
 <!ENTITY Ctr_hideprbutton	"Masquer l'icône de notification lorsqu'une fenêtre surgissante est bloquée">
 <!ENTITY Ctr_locsearchbw10	"Réduire la hauteur des barres d'adresse et de recherche (expérimental)">
-<!ENTITY Ctr_urlbar_ib		"Bouton d'identité des sites (boite d'identité)">
+<!ENTITY Ctr_urlbar_ib		"Bouton d'identité des sites">
 <!ENTITY Ctr_ib_nohovcolor	"Ne pas afficher la couleur grise lors du survol">
 <!ENTITY Ctr_ib_graycolor	"Utiliser une couleur grise pour les identités inconnues et les pages « about: »">
 <!ENTITY Ctr_verifiedcolors	"Colorer le bouton pour les sites web vérifiés et les connexions sécurisées et non sécurisées">
