--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -16,6 +16,7 @@
 <!ENTITY Ctr_rr				"Startujće &brandShortName; znowa!">
 <!ENTITY Ctr_window			"wokno">
 <!ENTITY Ctr_centered		"Centrowano">
+<!ENTITY Ctr_page			"Page">
 
 <!ENTITY Ctr_cuibuttons		"Tłóčatka">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
