--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -16,6 +16,7 @@
 <!ENTITY Ctr_rr				"Riavviare &brandShortName;!">
 <!ENTITY Ctr_window			"la finestra">
 <!ENTITY Ctr_centered		"Centered">
+<!ENTITY Ctr_page			"Page">
 
 <!ENTITY Ctr_cuibuttons		"Pulsanti">
 <!ENTITY Ctr_cuibutnormal	"Normali">
@@ -262,7 +263,7 @@
 <!ENTITY Ctr_hideurlzoom	"Nascondi il pulsante dello zoom (se presente)">
 <!ENTITY Ctr_hideprbutton	"Nascondi l’icona di notifica quando un popup viene bloccato">
 <!ENTITY Ctr_locsearchbw10	"Riduci l'altezza delle barre degli indirizzi e di ricerca (sperimentale)">
-<!ENTITY Ctr_urlbar_ib		"Pulsante delle connessioni sicure (riquadro di verifica)">
+<!ENTITY Ctr_urlbar_ib		"Pulsante delle connessioni sicure">
 <!ENTITY Ctr_ib_nohovcolor	"Non mostrare il colore grigio al passaggio del mouse">
 <!ENTITY Ctr_ib_graycolor	"Colore grigio per le identità sconosciute e le pagine chrome">
 <!ENTITY Ctr_verifiedcolors	"Pulsanti colorati per le connessioni ai siti verificati, sicuri e non sicuri">
