--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -16,6 +16,7 @@
 <!ENTITY Ctr_rr				"要 &brandShortName; 再起動">
 <!ENTITY Ctr_window			"ウィンドウ">
 <!ENTITY Ctr_centered		"中央揃え">
+<!ENTITY Ctr_page			"Page">
 
 <!ENTITY Ctr_cuibuttons		"ボタン">
 <!ENTITY Ctr_cuibutnormal	"通常">
@@ -262,7 +263,7 @@
 <!ENTITY Ctr_hideurlzoom	"ズームボタンを隠す (表示されている場合)">
 <!ENTITY Ctr_hideprbutton	"ポップアップブロックの通知アイコンを隠す">
 <!ENTITY Ctr_locsearchbw10	"ロケーションバーと検索バーの高さを減らす (実験的)">
-<!ENTITY Ctr_urlbar_ib		"サイト認証ボタン (identity box)">
+<!ENTITY Ctr_urlbar_ib		"サイト認証ボタン">
 <!ENTITY Ctr_ib_nohovcolor	"カーソルを乗せた時に色を変えない">
 <!ENTITY Ctr_ib_graycolor	"Web サイトの識別情報を取得できない時はグレーで表示する">
 <!ENTITY Ctr_verifiedcolors	"審査済みのウェブサイト、安全な接続、安全でない接続でボタンの色を分ける">
