--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -16,6 +16,7 @@
 <!ENTITY Ctr_rr				"Reinicie o &brandShortName;!">
 <!ENTITY Ctr_window			"Janela">
 <!ENTITY Ctr_centered		"Centered">
+<!ENTITY Ctr_page			"Page">
 
 <!ENTITY Ctr_cuibuttons		"Botões">
 <!ENTITY Ctr_cuibutnormal	"Normais">
@@ -262,7 +263,7 @@
 <!ENTITY Ctr_hideurlzoom	"Ocultar botão de zoom (se disponível)">
 <!ENTITY Ctr_hideprbutton	"Ocultar o Ícone de notificação quando um pop-up ficar bloqueado">
 <!ENTITY Ctr_locsearchbw10	"Reduzir altura das barras de localização e barras de pesquisa (experimental)">
-<!ENTITY Ctr_urlbar_ib		"Botão de identidade do site (caixa de identidade)">
+<!ENTITY Ctr_urlbar_ib		"Botão de identidade do site">
 <!ENTITY Ctr_ib_nohovcolor	"Não exibir cor cinza ao passar com o cursor">
 <!ENTITY Ctr_ib_graycolor	"Cor cinza para identidade desconhecida e páginas chrome">
 <!ENTITY Ctr_verifiedcolors	"Cores do botão para sites verificados, conexões seguras e não seguras">
