--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -16,6 +16,7 @@
 <!ENTITY Ctr_rr				"Zahtevan je ponovni zagon!">
 <!ENTITY Ctr_window			"okno">
 <!ENTITY Ctr_centered		"Na sredini">
+<!ENTITY Ctr_page			"Page">
 
 <!ENTITY Ctr_cuibuttons		"Gumbi">
 <!ENTITY Ctr_cuibutnormal	"Običajno">
@@ -262,7 +263,7 @@
 <!ENTITY Ctr_hideurlzoom	"Skrij gumb za povečavo (če je prisoten)">
 <!ENTITY Ctr_hideprbutton	"Skrij ikono obvestil ob blokiranju pojavnega okna">
 <!ENTITY Ctr_locsearchbw10	"Zmanjšaj višino naslovne in iskalne vrstice (preskusno)">
-<!ENTITY Ctr_urlbar_ib		"Gumb identitete strani (polje identitete)">
+<!ENTITY Ctr_urlbar_ib		"Gumb identitete strani">
 <!ENTITY Ctr_ib_nohovcolor	"Ob prehodu ne prikaži sive barve">
 <!ENTITY Ctr_ib_graycolor	"Siva barva za neznano identiteto in strani chrome">
 <!ENTITY Ctr_verifiedcolors	"Barve gumbov za preverjene strani, varne in nezanesljive povezave">
