--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -16,6 +16,7 @@
 <!ENTITY Ctr_rr				"需重啟 &brandShortName;!">
 <!ENTITY Ctr_window			"視窗">
 <!ENTITY Ctr_centered		"Centered">
+<!ENTITY Ctr_page			"Page">
 
 <!ENTITY Ctr_cuibuttons		"按鈕">
 <!ENTITY Ctr_cuibutnormal	"標準圖示">
@@ -262,7 +263,7 @@
 <!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
 <!ENTITY Ctr_hideprbutton	"當彈出型廣告視窗被封鎖時，不顯示通知圖示">
 <!ENTITY Ctr_locsearchbw10	"減少網址列和搜尋列高度 (實驗性)">
-<!ENTITY Ctr_urlbar_ib		"網站識別鈕 (身份區塊)">
+<!ENTITY Ctr_urlbar_ib		"網站識別鈕">
 <!ENTITY Ctr_ib_nohovcolor	"懸停時，不著上灰色底">
 <!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
