--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -16,6 +16,7 @@
 <!ENTITY Ctr_rr				"Wymagany restart!">
 <!ENTITY Ctr_window			"okno">
 <!ENTITY Ctr_centered		"Wyśrodkowany">
+<!ENTITY Ctr_page			"Page">
 
 <!ENTITY Ctr_cuibuttons		"Przyciski">
 <!ENTITY Ctr_cuibutnormal	"Normalne">
@@ -262,7 +263,7 @@
 <!ENTITY Ctr_hideurlzoom	"Ukryj przycisk powiększenia (jeżeli obecny)">
 <!ENTITY Ctr_hideprbutton	"Ukryj ikonę powiadomienia, gdy wyskakujące okno zostanie zablokowane">
 <!ENTITY Ctr_locsearchbw10	"Zredukuj wysokość paska adresu i wyszukiwania (eksperymentalne)">
-<!ENTITY Ctr_urlbar_ib		"Przycisk tożsamości witryny (pole tożsamości)">
+<!ENTITY Ctr_urlbar_ib		"Przycisk tożsamości witryny">
 <!ENTITY Ctr_ib_nohovcolor	"Nie pokazuj szarego koloru po najechaniu">
 <!ENTITY Ctr_ib_graycolor	"Szary kolor dla nieznanej tożsamości oraz stron 'about:'">
 <!ENTITY Ctr_verifiedcolors	"Kolory przycisków zweryfikowanych stron, połączeń bezpiecznych oraz niebezpiecznych">
