--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -16,7 +16,7 @@
 <!ENTITY Ctr_rr				"Taaskäivitamine vajalik!">
 <!ENTITY Ctr_window			"aken">
 <!ENTITY Ctr_centered		"Keskele joondatud">
-<!ENTITY Ctr_page			"Page">
+<!ENTITY Ctr_page			"Leht">
 
 <!ENTITY Ctr_cuibuttons		"Nupud">
 <!ENTITY Ctr_cuibutnormal	"Tavalised">
@@ -283,7 +283,7 @@
 <!ENTITY Ctr_autocomplete	"Automaatlõpetamise hüpik">
 <!ENTITY Ctr_altautocompl	"Alternatiivne välimus">
 <!ENTITY Ctr_autocompl_it	"Eemalda kirjed 'Otsi otsingumootoriga...' ja 'Külasta' (kui on)">
-<!ENTITY Ctr_acompl_search	"Show search engines">
+<!ENTITY Ctr_acompl_search	"Näita otsingumootoreid">
 <!ENTITY Ctr_autocompl_hl	"Sisestatule vastava teksti esiletõstmine">
 <!ENTITY Ctr_autocompl_rhl	"Aero värvid esiletõstetud tulemuste tähistamiseks">
 <!ENTITY Ctr_autocompl_not	"Peida lehe pealkiri">
