--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -16,7 +16,7 @@
 <!ENTITY Ctr_rr				"要 &brandShortName; 再起動">
 <!ENTITY Ctr_window			"ウィンドウ">
 <!ENTITY Ctr_centered		"中央揃え">
-<!ENTITY Ctr_page			"Page">
+<!ENTITY Ctr_page			"ページ ">
 
 <!ENTITY Ctr_cuibuttons		"ボタン">
 <!ENTITY Ctr_cuibutnormal	"通常">
